--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-        <!--</div><!-- /.container -->-->
+        <!--</div><!-- /.container -->
         
         <!-- jQuery CDN -->
         <script
